# Desktop-Teacher

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1775496266008-75642ce0225028.mjs
docs/: architecture.md  prd-v0.md  srs-v0.md  v0-qa-checklist.md
docs/exec-plans/: README.md  index.md  step-00-tech-foundation.md  step-01-desktop-shell-and-avatar.md  step-02-capture-and-submit.md  step-03-local-conversations-and-archive.md  step-04-model-adapter-and-answering.md  step-05-follow-up-chat.md  step-06-search-skills-and-routing.md  step-07-errors-and-observability.md  step-08-polish-and-release.md
docs/exec-plans/active/: step-09-bugfix-and-ux-improvements.md
docs/exec-plans/completed/: step-00-tech-foundation.md  step-01-desktop-shell-and-avatar.md  step-02-capture-and-submit.md  step-03-local-conversations-and-archive.md  step-04-model-adapter-and-answering.md  step-05-follow-up-chat.md  step-07-errors-and-observability.md  step-08-polish-and-release.md  step-09-bugfix-and-ux-improvements.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  lib.rs  main.rs  tray.rs  window_utils.rs
src/__tests__/: context.test.ts  storage.node.test.ts
src/components/: CaptureConfirm.tsx  CaptureOverlay.tsx  ChatView.tsx  HistoryList.tsx  SettingsModal.tsx  SidebarApp.tsx
src/hooks/: ConversationContext.tsx  SettingsContext.tsx
src/services/: errors.ts  logger.ts
src/types/: capture.ts
(+20 files in other folders)
