[package]
name = "desktop-teacher"
version = "0.1.0"
description = "Desktop AI Teacher Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_teacher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
